<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <RadioGroup
            android:id="@+id/choices"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical">
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/automatic"
                android:text="@string/auto_openLock"
                />

        <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/disAutomatic"
                android:text="@string/handle_openLock"
                />
    </RadioGroup>
    <TextView
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:text="@string/input_time"/>

    <EditText
            android:id="@+id/time"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            />

    <Button
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:text="@string/save"
            android:id="@+id/save"/>
    <Button
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:text="@string/send_key"
            android:id="@+id/key"/>

    <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/image"/>
</LinearLayout>